# chisel-pipeline

./: .gitignore  README.md  config.py  eda.py  pipeline.py  pyproject.toml
libs/: annotation_generator.py  file_handler.py  image_processor.py  mask_filters.py  spatial_metadata.py  utils.py  visualiser.py  write_report.py
libs/eda/: indices.py  plotting.py  sections.py
models/: context.py  metadata.py  reportsection.py
notebooks/: template.ipynb
tests/: conftest.py  test_annotation_generator.py
