[tool.poetry]
name = "chisel-pipeline"
version = "0.1.0"
description = "Notebook-first dataset preparation and EDA profiler pipeline for satellite segmentation datasets. Eventually to include training."
authors = ["Wynne Chen"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
numpy = ">=2.4.4,<3.0.0"
pandas = ">=3.0.3,<4.0.0"
geopandas = ">=1.1.3,<2.0.0"
pyyaml = ">=6.0.3,<7.0.0"
shapely = ">=2.1.2,<3.0.0"
pyproj = ">=3.7.2,<4.0.0"
matplotlib = ">=3.10.9,<4.0.0"
plotly = ">=6.7.0,<7.0.0"
affine = ">=2.4.0,<3.0.0"
seaborn = ">=0.13.2,<0.14.0"
pillow = ">=12.2.0,<13.0.0"
kaleido = ">=1.3.0,<2.0.0"
opencv-python = ">=4.13.0.92,<5.0.0.0"
rasterio = ">=1.4.4,<2.0.0"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^7.2.0"
jupyterlab = "^4.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"